--- a/LogicGates/LogicGates.csproj
+++ b/LogicGates/LogicGates.csproj
@@ -7,4 +7,7 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Spectre.Console" Version="0.46.0" />
+  </ItemGroup>
 </Project>
